✨ Fix alignment and spacing in footer module

--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -25,11 +25,11 @@
     display: flex;
     flex-direction: column;
     gap: 1.8rem;
-    text-align: center;
 
     @media screen and (max-width: 600px) {
+      text-align: center;
       justify-content: center;
-      gap: 2.2rem;
+      gap: 2.6rem;
       padding-top: 6rem;
     }
 
@@ -54,8 +54,8 @@
         width: 2.8rem;
 
         @media screen and (max-width: 600px) {
-          height: 3.8rem;
-          width: 3.8rem;
+          height: 3.6rem;
+          width: 3.6rem;
         }
       }
     }
